--- a/doc/8.1-romain briend.md
+++ b/doc/8.1-romain briend.md
@@ -1,6 +1,6 @@
 Rapport personnel Romain Briend :
 
-Dans le cadre du projet de TLC, mon rôle principal a été de m'occuper de l'analyse lexicale et syntaxique en utilisant Antlr avec Arthur. Cette tâche consistait à définir les règles grammaticales de notre langage de programmation cible en se basant sur la spec du langage While et à utiliser Antlr pour générer un analyseur capable de reconnaître ces règles dans les programmes écrits dans ce langage. Cette tâche m'a permi de grandement me perfectionner dans l'utilisation d'Antlr mais surtout de mieux comprendre le fonctionnement de l'analyse descendante. Cette compréhension permet alors de réaliser une grammaire Antlr plus efficacement et en évitant les récursions à gauche.
+Dans le cadre du projet de TLC, mon rôle principal a été de m'occuper de l'analyse lexicale et syntaxique en utilisant Antlr avec Arthur. Cette tâche consistait à définir les règles grammaticales de notre langage de programmation cible en se basant sur la spec du langage While et à utiliser Antlr pour générer un analyseur capable de reconnaître ces règles dans les programmes écrits dans ce langage. Cette tâche m'a permi de grandement me perfectionner dans l'utilisation d'Antlr mais surtout de mieux comprendre le fonctionnement de l'analyse descendante. Cette compréhension permet alors de réaliser une grammaire Antlr plus efficacement et en évitant les récursions à gauche. L'AST a été réalisé en commun sur Figma pour que chaqu'un puisse travailler sa partie ensuite.
 
 Ensuite, j'ai pris en charge la validation des programmes pour vérifier leur validité. Cela impliquait de programmer la structure du système de validation, avec les différents types de Validator ainsi que la structure en différents modules. J'ai également travailler sur le retour utilisateur en mettant en place le système d'affichage des erreurs et des avertissements, qui permettait de communiquer aux utilisateurs les erreurs ou les problèmes rencontrés lors de la validation des programmes. (Couleurs, mise en valeur de certains textes, lien vers l'erreur cliquable, tips ...). Au dela de la structure, je me suis chargé du développement de la validation du typage et des erreurs/warnings concernant les variables.
 
