--- a/doc/8.1-romain-briend.md
+++ b/doc/8.1-romain-briend.md
@@ -1,8 +1,11 @@
 Rapport personnel Romain Briend :
 
+# Tache 1 : Analyse lexicale et syntaxique (génération AST)
 Dans le cadre du projet de TLC, mon rôle principal a été de m'occuper de l'analyse lexicale et syntaxique en utilisant Antlr avec Arthur. Cette tâche consistait à définir les règles grammaticales de notre langage de programmation cible en se basant sur la spec du langage While et à utiliser Antlr pour générer un analyseur capable de reconnaître ces règles dans les programmes écrits dans ce langage. Cette tâche m'a permi de grandement me perfectionner dans l'utilisation d'Antlr mais surtout de mieux comprendre le fonctionnement de l'analyse descendante. Cette compréhension permet alors de réaliser une grammaire Antlr plus efficacement et en évitant les récursions à gauche.
 
+# Tache 2 : Validation des programmes
 Ensuite, j'ai pris en charge la validation des programmes pour vérifier leur validité. Cela impliquait de programmer la structure du système de validation, avec les différents types de Validator ainsi que la structure en différents modules. J'ai également travailler sur le retour utilisateur en mettant en place le système d'affichage des erreurs et des avertissements, qui permettait de communiquer aux utilisateurs les erreurs ou les problèmes rencontrés lors de la validation des programmes. (Couleurs, mise en valeur de certains textes, lien vers l'erreur cliquable, tips ...). Au dela de la structure, je me suis chargé du développement de la validation du typage et des erreurs/warnings concernant les variables.
 
+# Tache 3 : Optimisation du code intermédiaire
 Pour finir, je me suis chargé de l'optimisation du code intermédiaire. Pour cela, j'ai décidé de me concentrer sur les optimisations locales avec l'optimisation des sous-expressions communes et la suppression du code mort. Sur cette partie, j'ai quelques regrets de ne pas m'y être mis plus rapidement, car avant de commencer le développement et la conception, je sous-estimais certains aspects de l'optimisation. Je pense que si je m'etais donné plus de temps, j'aurais aimé implementer plus d'optimisations, et notamment des globales par exemples car cette partie était très intéressante.
 
